--- a/languages.toml
+++ b/languages.toml
@@ -613,3 +613,12 @@ auto-format = true
 comment-token = "//"
 language-server = { command = "rescript-language-server", args = ["--stdio"] }
 indent = { tab-width = 2, unit = "  " }
+
+[[language]]
+name = "sql"
+scope = "source.sql"
+roots = []
+file-types = ["sql"]
+injection-regex = "sql"
+comment-token = "--"
+indent = { tab-width = 2, unit = " " }
